Dark Mode Fixed

--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -20,12 +20,14 @@
   border-radius: 20px;
 }
 .sb-li {
-  padding: 0rem 0.5rem 1rem 0.5rem;
-  margin: 1rem 0rem 0.5rem 0rem;
+  padding: 0.5rem;
+  margin: 1rem 0rem;
+  color: black !important;
+
 }
 .sb-li.active {
-  background-color: white;
-  color: black;
+  color: white !important;
+  background-color: rgb(0, 0, 0);
   border-radius: 30px;
 }
 .sb-icon {
@@ -53,10 +55,9 @@
     font-size: 1rem !important;
   }
   .sb-li {
-    padding: 1.5rem 1.5rem 1rem 2rem;
-    margin: 1rem 0rem 1rem 0;
+    padding: 1rem 2rem;
+    margin: 1.5rem 0rem;
   }
-  
   .icons {
     font-size: 1.3rem !important;
   }
